grid fixes, alignment control styles

--- a/src/assets/styles/admin.css
+++ b/src/assets/styles/admin.css
@@ -45,10 +45,32 @@ button.ksd-editor-btn.ksd-editor-btn--placeholder {
 	white-space: nowrap;
 }
 
+/**
+ * Aligment Controls
+ */
+
+.editor-alignment-controls > div > p {
+	margin-bottom: 0;
+}
+
+.editor-alignment-controls > div > .components-button-group {
+	display: flex;
+	gap: 0.175em;
+	margin-top: 0.25em;
+	margin-bottom: 1em;
+}
+
+.editor-alignment-controls
+	> div
+	> .components-button-group
+	> button.is-pressed
+	svg {
+	fill: "white";
+}
+
 /*--------------------------------------------------------------
   3.0 Modifiers
 --------------------------------------------------------------*/
-
 /**
 * GRID
 */
@@ -73,7 +95,9 @@ button.ksd-editor-btn.ksd-editor-btn--placeholder {
 
 :is(.grid-cols-2, .grid-cols-3, .grid-cols-4, .grid-cols-5, .grid-cols-6) h1,
 :is(.grid-cols-2, .grid-cols-3, .grid-cols-4, .grid-cols-5, .grid-cols-6) h2,
-:is(.grid-cols-2, .grid-cols-3, .grid-cols-4, .grid-cols-5, .grid-cols-6) > div > p:first-child {
+:is(.grid-cols-2, .grid-cols-3, .grid-cols-4, .grid-cols-5, .grid-cols-6)
+	> div
+	> p:first-child {
 	margin-top: 0;
 }
 
@@ -122,11 +146,119 @@ button.ksd-editor-btn.ksd-editor-btn--placeholder {
 		grid-template-columns: repeat(6, minmax(0, 1fr));
 	}
 
-	:where(:is(.grid-cols-2-rv, .grid-cols-70-30-rv, .grid-cols-75-25-rv, .grid-cols-30-70-rv, .grid-cols-25-75-rv):first-child) {
+	:where(:is(.grid-cols-2-rv, .grid-cols-70-30-rv, .grid-cols-75-25-rv, .grid-cols-30-70-rv, .grid-cols-25-75-rv, .is-reversed)
+			div:first-child) {
 		order: 2;
 	}
 
-	:where(:is(.grid-cols-2-rv, .grid-cols-70-30-rv, .grid-cols-75-25-rv, .grid-cols-30-70-rv, .grid-cols-25-75-rv):last-child) {
+	:where(:is(.grid-cols-2-rv, .grid-cols-70-30-rv, .grid-cols-75-25-rv, .grid-cols-30-70-rv, .grid-cols-25-75-rv, .is-reversed)
+			div:last-child) {
 		order: 1;
 	}
+}
+
+/**
+ * BUTTONS
+ */
+/* Default styles */
+.wp-block-button__link {
+	--_background-color: var(--wp--preset--color--primary);
+	--_text-color: var(--wp--preset--color--white);
+	--_border: 2px solid var(--_background-color);
+	--_radius: 0;
+	--_size: 20rem;
+
+	position: relative;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	color: var(--_text-color) !important;
+	font-weight: bold;
+	text-transform: uppercase;
+	line-height: 1.2;
+
+	padding-block: 1em;
+	padding-inline: 3em;
+
+	inline-size: var(--_size);
+
+	background: var(--_background-color) !important;
+
+	border-radius: var(--_radius) !important;
+	border: var(--_border) !important;
+}
+
+/* Set hover state */
+.wp-block-button__link:hover {
+	--_background-color: var(--wp--preset--color--grey-dark);
+	--_text-color: var(--wp--preset--color--white);
+}
+
+/* Set disabled state */
+:is(a, button).wp-block-button__link:disabled {
+	color: grey;
+	pointer-events: none;
+	visibility: hidden;
+}
+
+/* Fill Styles */
+.is-style-primary-fill > .wp-block-button__link {
+	--_background-color: var(--wp--preset--color--primary);
+	--_text-color: var(--wp--preset--color--white);
+}
+
+.is-style-secondary-fill > .wp-block-button__link {
+	--_background-color: var(--wp--preset--color--secondary);
+	--_text-color: var(--wp--preset--color--white);
+}
+
+/* Outline Styles */
+:is(.is-style-primary-outline, .is-style-secondary-outline)
+	> .wp-block-button__link {
+	background: none !important;
+}
+
+.is-style-primary-outline > .wp-block-button__link {
+	--_background-color: var(--wp--preset--color--primary);
+	--_text-color: var(--wp--preset--color--primary);
+}
+
+.is-style-secondary-outline > .wp-block-button__link {
+	--_background-color: var(--wp--preset--color--secondary);
+	--_text-color: var(--wp--preset--color--secondary);
+}
+
+/* Arrow Styles */
+:is(.is-style-secondary-arrow, .is-style-primary-arrow)
+	> .wp-block-button__link {
+	justify-content: flex-start;
+}
+
+.is-style-primary-arrow > .wp-block-button__link {
+	--_background-color: var(--wp--preset--color--primary);
+	--_text-color: var(--wp--preset--color--white);
+}
+
+.is-style-secondary-arrow > .wp-block-button__link {
+	--_background-color: var(--wp--preset--color--secondary);
+	--_text-color: var(--wp--preset--color--white);
+}
+
+.wp-block-button__link::before {
+	display: inline-block;
+	font-style: normal;
+	font-variant: normal;
+	text-rendering: auto;
+	-webkit-font-smoothing: antialiased;
+}
+
+:is(.is-style-secondary-arrow, .is-style-primary-arrow)
+	> .wp-block-button__link::before {
+	font-family: "Font Awesome 5 Free";
+	font-weight: 900;
+	content: "\f061";
+
+	margin-right: 0.5em;
 }
